--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="bootstrap.min.css">
   <script src="jquery.min.js"></script>
   <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>  
+  <script src="bootstrap.min.js"></script>
+  <link rel="stylesheet" href="tiszato.css">
+  <a href="tiszato.js"></a>  
 </head>
 <body>
 
