--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <p>1973-ban építették fel a Kiskörei Erőművet a duzzasztógáttal a tiszai áradások szabályozása és az Alföld jobb
           vízellátása végett. Feltöltése az 1990-es években fejeződött be. A tónak mára kialakult az ökológiája,
           madárrezervátum is működik benne. 1999 óta a Hortobágyi Nemzeti Park bemutató területeként az <abbr
-            title="Egyesült Nemzetek Nevelésügyi, Tudományos és Kulturális Szervezete">UNESCO</abbr> Világörökség része.
+            title="Egyesült Nemzetek Nevelésügyi, Tudományos és Kulturális Szervezete">UNESCO</abbr> 
+            <a href="https://hu.wikipedia.org/wiki/Magyarország_világörökségi_helyszínei" target="_blank">Világörökség</a> része.
         </p>
       </div>
       <div class="col-lg-4">
