--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             <tr>
               <td onclick="turizmus('strand');">Szabad-strand</td>
             </tr>
+            <tr>
+              <td onclick="turizmus('Fazekasmesterek');">Fazekasmesterek</td>
+            </tr>
           </tbody>
         </table>
       </div>
